<?xml version="1.0"?>
<package format="2">
  <name>mujoco_vendor</name>
  <version>3.0.0</version>
  <description>The mujoco_vendor package</description>

  <maintainer email="sahara@jsk.imi.i.u-tokyo.ac.jp">Sahara Yuta</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>