<?xml version="1.0"?>
<package format="2">
  <name>mujoco</name>
  <version>3.2.6</version>
  <description>The vendor package of mujoco.</description>

  <maintainer email="sahara@jsk.imi.i.u-tokyo.ac.jp">Sahara Yuta</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>